Set overflow: hidden to rehearsal img to prevent them being too wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,6 +509,8 @@ footer {
     .rehearsal-photos img {
         width: 25%;
         height: auto;
+        margin-top: 0.125rem;
+        overflow: hidden;
     }
 
     .footer-links {
